# iotron

./: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
.gocache/: trim.txt
.gocache/00/: 00374698b4e011f5210a24819f156d2e58111fc2fadc38049536dda791d25e8c-a  003b40dc44996fa651606616809a20801e3c6c6e1ce71a8084cae569034c5164-d  00aef39c27fc405e979e4713633c2824905751375294f0d68b52251c1df9f52d-a  00c14a5a12150d03e15a727deeea7ca9052ae754376c0b5c0cbe3f05865478a8-d  00c3d48bdcd0c466616e40106652c56960b7558681345e30bb9e46bbd720b558-a
.gocache/01/: 012b4c0c77355ae1dd1eb7c2952109d579f539e96153f8b5572b8f056edaa291-d  018b25608cc89782e796583c3336d4e2eaf0f79ae6ab0aec2c5d35a3b6117108-a  019329cf54f941a087380ae6ae534efdd312d9935a2611e144d8c39906210c51-a  01c50445dca70eac43c51ded525776300607eb83c9fc4ddca53ac2affb5a2be0-a  01ce4c9e26096846b73d5e0d43abb60cd2c192bf9a717a0508dd33eb2f3d24d2-a  01fcea43fdd9b7ebad6ac125f356a4c1dc1024f79270e05ba3e3c83d1dc1d80b-d
.gocache/02/: 021faf9f2cf8521547084374d928e5cd512759db443006bde34719ddd31f4c66-a  024e92a51dd5686f2568e6f3ee406bc2ecbad4d51222b51cf369591650baa478-d  025268da6c7d3e1e4298ccd83bfd4cb8815ba7ca20854cb79e6a1c65b01ced00-d  0258b19a5ee376d3041e553036fb2fdf576152a96e826090d137596c86adaf75-a
.gocache/03/: 03532d173eca90b5b8a7b7290b2ac38486a7d5b8cc73643c065c99e368a10118-d  0386d87c68b82fbc64ab532522d145ee78ee48c8c5212be69296a23285995fa7-a  039df97eb4a4845fc37768979b33b3ed8b27b25cb92e2f8b5d7082a2a5a1a4e9-a  03aa461adaa0c2409f2e2d3e8774854ca3621f3870a7f9352de164fedb65189d-a  03d137c8337f85021ae9fb00b2bf9a8dc37ac1fb2a75cbff195306e052b0dc38-a
cli/: Makefile  cli.cpp
core/: README.md  c_api.cpp  c_api.h  config.h  core.cpp  runtime_io.cpp  runtime_io.h
iotron/: __init__.py  ai.py  api.py  catalog.py  cli.py  hardware_lab.py  observability.py  oidc.py  operations.py  protocol_io.py  secrets.py  security.py  service.py  storage.py  toolchains.py
scripts/: README.md  build_native.py  cleanup.sh  migrate_db.py  setup.sh
tests/: test_service.py
(+1295 files in other folders)
