[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iotron"
version = "0.3.0"
description = "Open-source IoT control plane with CLI, FastAPI, and AI planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
iotron = "iotron.cli:main"

[tool.setuptools.packages.find]
include = ["iotron*"]

